[ENG][ESP]:lipstick:  UI cretaed/Creación de interfaz de usuario
[ENG]
-->:lipstick: The UI was created using Bootstrap
-->:bug: Minor bugs were fixed
-->:goal_net: Minor improvements were done

[ESP]
-->:lipstick: Se crea la interfaz de usuario usando Bootstrap
-->:bug: Se arreglan errores menores
-->:goal_net: Se implementan pequeñas mejoras

--- a/talkie_talkie_app/public/css/app.css
+++ b/talkie_talkie_app/public/css/app.css
@@ -73,6 +73,10 @@
 }
 
 body {
+  display:flex; 
+  flex-direction:column; 
+  min-height:100vh;
+
   margin: 0;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
@@ -4475,7 +4479,7 @@ textarea.form-control-lg {
   color: #fff;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 1);
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
   color: rgba(255, 255, 255, 0.75);
@@ -11280,5 +11284,187 @@ textarea.form-control-lg {
 
   .d-print-none {
     display: none !important;
+  }
+}
+
+
+html {
+  scroll-padding-top: 67px;
+  min-height: 100%;
+}
+
+.btn-xl {
+  text-transform: uppercase;
+  padding: 1.5rem 3rem;
+  font-size: 0.9rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+}
+
+/*Navbar colors*/
+.navbar-custom {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.navbar-custom .navbar-brand {
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  font-weight: 700;
+}
+.navbar-custom .navbar-nav .nav-item .nav-link {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+}
+
+footer{
+  margin-top:auto;
+  bottom: 0%;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+  color:white;
+}
+
+.footer-cols{
+  margin-left:3rem;
+  margin-right:3rem;
+  padding-bottom:2rem;
+}
+
+.mt-custom{
+  margin-top:calc(5rem + 72px);
+}
+
+.mt-2-custom{
+  margin-top:calc(2rem + 72px);
+  margin-bottom:calc(1rem + 72px);
+}
+
+.search-topic{
+  padding-top: 2%;
+}
+
+.search-topic-btn{
+  padding-top: 8%;
+}
+
+.background-color{
+  /*background: linear-gradient(0.2deg, #09D9EE 0%, #23FF00 100%);*/
+  background: linear-gradient(0.2deg, rgba(9,217,238,0.75) 0%, rgba(35,255,0,0.75) 100%);
+  background-repeat: no-repeat;
+  background-size:cover ;
+}
+
+.info{
+  margin-top:2%;
+}
+
+.return-btn{
+  margin-top:5%;
+  margin-bottom:5%;
+}
+
+.link-custom{
+  text-decoration: none;
+  color:white;
+}
+
+a:hover{
+  color:rgba(255, 255, 255, 0.55);
+}
+
+.return-btn-2{
+  margin-top:2%;
+}
+
+.return-btn-3{
+  margin-bottom:3%;
+}
+
+.list-group {
+  overflow-y: auto;
+  height: 26rem;
+}
+
+.container-chat{
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+#time{
+  font-size:8px;
+  margin-top:50%;
+  color:gray;
+}
+
+header.masthead {
+  position: relative;
+  overflow: hidden;
+  padding-top: calc(7rem + 72px);
+  padding-bottom: 7rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  /*background: linear-gradient(0deg, #ff6a00 0%, #ee0979 100%);*/
+  background: transparent;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+header.masthead .masthead-content {
+  z-index: 1;
+  position: relative;
+}
+header.masthead .masthead-content .masthead-heading {
+  font-size: 4rem;
+}
+header.masthead .masthead-content .masthead-subheading {
+  font-size: 2rem;
+}
+header.masthead .bg-circle {
+  z-index: 0;
+  position: absolute;
+  border-radius: 100%;
+  background: linear-gradient(0deg, #ee0979 0%, #ff6a00 100%);
+}
+header.masthead .bg-circle-1 {
+  height: 90rem;
+  width: 90rem;
+  bottom: -55rem;
+  left: -55rem;
+}
+header.masthead .bg-circle-2 {
+  height: 50rem;
+  width: 50rem;
+  top: -25rem;
+  right: -25rem;
+}
+header.masthead .bg-circle-3 {
+  height: 20rem;
+  width: 20rem;
+  bottom: -10rem;
+  right: 5%;
+}
+header.masthead .bg-circle-4 {
+  height: 30rem;
+  width: 30rem;
+  top: -5rem;
+  right: 35%;
+}
+
+@media (min-width: 992px) {
+  header.masthead {
+    padding-top: calc(10rem + 55px);
+    padding-bottom: 10rem;
+  }
+  header.masthead .masthead-content .masthead-heading {
+    font-size: 6rem;
+  }
+  header.masthead .masthead-content .masthead-subheading {
+    font-size: 4rem;
+  }
+  .mt-custom{
+    margin-top:calc(8rem + 55px);
   }
 }
